CSS - Added border radius to appropriate corners of navbar in navbar. Changed BGColor from none to rgba(0, 0, 0, 0) for transparent navbar to fix transparent navbar not changing to black upon ham open on iOS

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,7 +48,7 @@
 }
 
 [data-navTheme="transparent"] {
-  --navBGColor: none;
+  --navBGColor: rgba(0, 0, 0, 0);
   --navLogoColor: #fff;
   --navArrowIconColor: #fff;
   --navArrowIconColorHover: rgb(209, 209, 209);
@@ -301,7 +301,7 @@ button {
   border-top-left-radius: 9px;
   border-bottom-left-radius: 9px;
   border-top-right-radius: 0px;
-  border-top-left-radius: 0px;
+  border-bottom-right-radius: 0px;
   /* max-width: 38rem; */
   width: 100%;
   font-size: 1.15rem;
@@ -2944,7 +2944,7 @@ button {
   max-width: var(--siteContentsLeastWidth);
   display: flex;
   justify-content: center;
-  padding: 1rem 0;
+  padding: 1rem 1rem;
   /* margin-top: 3.25rem; */
   /* margin-bottom: 1rem; */
   transition: 0.1s ease;
